--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "karma start"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
