--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "karma start"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
     "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.1.1",
